Fix overflow of the ordered meal
Resolves #46

--- a/client/sass/main.sass
+++ b/client/sass/main.sass
@@ -460,11 +460,14 @@ body
                 height: 4vmin
                 line-height: 4vmin
                 margin: 8px 0
+                margin-right: calc(8vmin + 30px)
 
                 color: white
                 font-family: 'Lato', sans-serif
                 font-weight: 300
                 font-size: 20px
+                
+                overflow: hidden
 
             /*
              * How many meals ordered.
